--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: linear-gradient(to bottom, #2e026d, #15162c);
 }
 
 .container {
@@ -15,6 +14,41 @@
   justify-content: center;
   gap: 3rem;
   padding: 4rem 1rem;
+
+  border: 1px solid black;
+}
+
+.profileContainer {
+  width: 80%;
+  border: 1px solid orange;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top p {
+  margin: 5px 0;
+}
+
+.top a {
+  border: 1px solid rgba(130,130,130,1);
+  background-color: transparent;
+  padding: .2rem 1.5rem;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+.top div {
+  display: flex;
+  flex-direction: column;
+}
+
+.profileContainer div {
+  display: flex;
+  gap: 25%;
 }
 
 @media (min-width: 640px) {
