--- a/src/styles/Edit.module.css
+++ b/src/styles/Edit.module.css
@@ -1,53 +1,145 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-  }
-  
-  .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 3rem;
-    padding: 4rem 1rem;
-  
-    border: 1px solid black;
-  }
-  
-  .profileContainer {
-    width: 80%;
-    border: 1px solid orange;
-  }
-  
-  .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .top p {
-    margin: 5px 0;
-  }
-  
-  .top button {
-    border: 1px solid rgba(130,130,130,1);
-    background-color: transparent;
-    padding: .2rem 1.5rem;
-    cursor: pointer;
-    border-radius: 12px;
-  }
-  
-  .top div {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .profileContainer div {
-    display: flex;
-    gap: 25%;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem 1rem;
+}
+
+.profileContainer {
+  width: 80%;
+  border: 1px solid rgba(224, 224, 224, 1);
+  border-radius: 12px;
+}
+
+.editProfileContainer {
+  width: 80%;
+  border: 1px solid rgba(224, 224, 224, 1);
+  border-radius: 12px;
+}
+
+
+.editProfileContainer div {
+  padding: 1rem 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.editProfileContainer div:nth-child(2) {
+  flex-direction: row !important;
+  align-items: center;
+}
+
+.editProfileContainer div:nth-child(2) p {
+  color: rgba(130, 130, 130, 1);
+  font-weight: 500;
+  font-size: 13px;
+}
+
+.profileContainer div {
+  padding: 1rem 3rem;
+}
+
+.profileContainer div:nth-child(1) {
+  border-top: 0;
+}
+
+.profileContainer div img {
+  width: 72px;
+  height: 72px;
+}
+
+.top {
+  display: flex;
+}
+
+.top p {
+  margin: 5px 0;
+}
+
+.top a {
+  border: 1px solid rgba(130,130,130,1);
+  background-color: transparent;
+  padding: .3rem 1.8rem;
+  color: rgba(130, 130, 130, 1);
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+.top div {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.profileContainer div {
+  display: flex;
+  gap: 25%;
+}
+
+.bigFont {
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.lightFont {
+  color: rgba(189, 189, 189, 1);
+  text-transform: uppercase;
+}
+
+.semiLightFont {
+  color: rgba(130, 130, 130, 1);
+}
+
+.topDivGap {
+  display: flex;
+  gap: 0;
+}
+
+.topDivGap h1 {
+  margin: 0;
+}
+
+.editProfileContainer div input {
+  padding: 1rem;
+  border-radius: 12px;
+  border: 1px solid rgba(130, 130, 130, 1);
+}
+
+.editProfileContainer div input[type="file"] {
+  display: none;
+}
+
+.photoLabel {
+  height: 72px;
+  width: 72px;
+  background-size: contain;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(255, 255, 255, 1);
+  filter: opacity(80%);
+  border-radius: 8px;
+}
+
+.submitBtn {
+  background-color: rgba(47, 128, 237, 1);
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+  border: transparent;
+  padding: .8rem 1.8rem;
+  width: fit-content;
+  border-radius: 8px;
+  cursor: pointer;
+}
