--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
 }
 
 .formContainer {
@@ -54,5 +55,9 @@
         width: 100%;
         padding: 1rem;
          border: transparent;
+    }
+
+    .container {
+        height: auto;
     }
 }
